--- a/src/Header.css
+++ b/src/Header.css
@@ -1,3 +1,6 @@
+.headersWrapper{
+
+}
 .header {
   display: flex;
   align-items: center;
@@ -249,5 +252,9 @@ a {
 }
 .header__ProfileDontHover {
   
+}
+
+@media only screen and (max-width: 600px) {
+
 }
 
