--- a/src/Phone/HomePage.css
+++ b/src/Phone/HomePage.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
     background-color: rgb(240, 245, 247);
     margin-top: 100px;
+    width: fit-content;
 }
 .homePage__gridWrapper{
     width: 100%;
