--- a/src/Phone/HomePhone.css
+++ b/src/Phone/HomePhone.css
@@ -1,19 +1,31 @@
 .homephone{
+ 
     display: flex;
-    flex: 1 1 auto;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     flex-direction: column;
-    box-sizing: border-box;
-    background-color: rgb(240, 245, 247);
+    align-items: center;
+    -webkit-box-pack: space-around;
+    -webkit-justify-content: space-around;
+    -ms-flex-pack: space-around;
+    justify-content: space-around;
+    background-color: white;
+    width: fit-content;
 }
 .homephone__wrapper{
     width: 100%;
     text-align: center;
     position: relative;
+    margin-top: 30px;
+   
 
 }
 .homephone__products{
     flex: 1 1 auto;
     background-color: rgb(248, 250, 251);
+    width: 100%;
+    margin-top: 30px;
    
 
 }
