--- a/src/ProductPage.css
+++ b/src/ProductPage.css
@@ -160,6 +160,171 @@
     margin-top: 10px;
 
 }
+@media only screen and (max-width: 600px) {
+
+    .product__cardGrid{
+        display: grid;
+        grid-template-rows: 1fr;
+        grid-template-columns: 1fr 1fr;
+        margin-top: 30px;
+        grid-column-gap: 10px;
+        grid-row-gap: 10px;
+       
+        
+       
+    }
+    .product__card{
+     
+        background-color: white;
+        width: 210px;
+        box-shadow: rgb(0 0 0 / 5%) 0px 0px 0px 0px, rgb(0 0 0 / 5%) 0px 2px 20px 0px;
+        position: relative;
+        margin: 10px;
+     
+        overflow: hidden;
+        box-sizing: border-box;
+       
+        text-align: left;
+      
+        display: block;
+        transition: transform 0.3s ease 0s;
+        cursor: pointer;
+        line-height: 1;
+       
+        
+       
+    }
+    .product__card:hover{
+        height: 285px;
+        background-color: white;
+        width: 215px;
+        box-shadow: rgb(0 0 0 / 5%) 0px 0px 0px 0px, rgb(0 0 0 / 5%) 0px 2px 20px 0px;
+        transition: 0.5s;
+        display: none;
+    
+    }
+    .product__card-image{
+        width: 100%;
+    }
+    .product__card-detail{
+        padding: 10px 12px;
+        display: flex;
+        flex-direction: column;
+        background-color: rgb(255, 255, 255);
+        overflow: visible;
+        border-radius: 0px 0px 4px 4px;
+    }
+    .product__card-detailprice{
+        font-size: 12px;
+        font-weight: 400;
+        flex-shrink: 0;
+        color: rgb(25, 42, 50);
+        margin-right: 6px;
+    }
+    .product__card-detailA{
+        font-size: 12px;
+        font-weight: 400;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        color: rgb(126, 154, 166);
+        margin-top: 10px;
+    
+    }
+    .circle{
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        background-color: #fff;
+        position: absolute;
+        top: -10%;
+        left: 60%;
+        opacity: .9;
+        transform: scale(0);
+        transition: all .3s ease;
+        z-index:3;
+        display: none;
+       
+       
+    }
+    .circle::before{
+        content: '';
+        display: block;
+        width: 100%;
+        height: 100%;
+        background-color:#57ccfd; ;
+        border-radius: 50%;
+        transform: scale(0);
+        transition: all .3s ease;
+        transition-delay: .2s;
+    }
+    .product__card:hover .circle{
+        transform: scale(1);
+    }
+    .product__card:hover .circle::before{
+        transform: scale(.9);
+        
+    }
+    
+    .product__cardPhone{
+        height: 280px;
+        background-color: white;
+        width: 210px;
+        box-shadow: rgb(0 0 0 / 5%) 0px 0px 0px 0px, rgb(0 0 0 / 5%) 0px 2px 20px 0px;
+        position: relative;
+        margin: 10px;
+     
+        overflow: hidden;
+        box-sizing: border-box;
+       
+        text-align: left;
+      
+        display: block;
+        transition: transform 0.3s ease 0s;
+        cursor: pointer;
+        line-height: 1;
+       
+        
+       
+    }
+    .product__card:hover{
+        height: 285px;
+        background-color: white;
+        width: 215px;
+        box-shadow: rgb(0 0 0 / 5%) 0px 0px 0px 0px, rgb(0 0 0 / 5%) 0px 2px 20px 0px;
+        transition: 0.5s;
+    
+    }
+    .product__card-imagePhone{
+        width: 100%;
+    }
+    .product__card-detail{
+        padding: 10px 12px;
+        display: flex;
+        flex-direction: column;
+        background-color: rgb(255, 255, 255);
+        overflow: visible;
+        border-radius: 0px 0px 4px 4px;
+    }
+    .product__card-detailprice{
+        font-size: 14px;
+        font-weight: 400;
+        flex-shrink: 0;
+        color: rgb(25, 42, 50);
+        margin-right: 6px;
+    }
+    .product__card-detailA{
+        font-size: 12px;
+        font-weight: 400;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        color: rgb(126, 154, 166);
+        margin-top: 10px;
+    
+    }
+
+}
 
 
 
