--- a/src/Phone/HomePhone.css
+++ b/src/Phone/HomePhone.css
@@ -1,17 +1,10 @@
 .homephone{
  
     display: flex;
-    -webkit-align-items: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
+    flex: 1 1 auto;
     flex-direction: column;
-    align-items: center;
-    -webkit-box-pack: space-around;
-    -webkit-justify-content: space-around;
-    -ms-flex-pack: space-around;
-    justify-content: space-around;
-    background-color: white;
-    width: fit-content;
+    box-sizing: border-box;
+    background-color: rgb(240, 245, 247);
 }
 .homephone__wrapper{
     width: 100%;
