--- a/src/Phone/ProductDetailsMobile.css
+++ b/src/Phone/ProductDetailsMobile.css
@@ -1,19 +1,31 @@
 
 .ProductContainer{
+    position: relative;
+    width: 100%;
+    z-index: 0;
+    
     display: flex;
-        -webkit-align-items: center;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        flex-direction: column;
-        align-items: center;
-        -webkit-box-pack: space-around;
-        -webkit-justify-content: space-around;
-        -ms-flex-pack: space-around;
-        justify-content: space-around;
-        background-color: white;
-        width: fit-content;
-        margin-bottom: 30px;
-        margin-top: 30px;
+    flex: 1;
+   
+    align-items: center;
+    
+    margin-top: 40px;
+ 
+    
+
+   
+}
+.dff{
+   
+
+   
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   
+   
+   
 }
 .productDetails__TabHeader{
     box-sizing: border-box;
@@ -35,15 +47,9 @@
 .productDetails__TabHeaderWrapper{
     display: flex;
     margin: auto;
-    flex-direction: column;
+    flex-direction: row;
 }
-.productDetails__TabHeaderContent{
-    width: 100%;
-    display: flex;
-    -webkit-box-pack: start;
-    justify-content: flex-start;
-    margin: auto;
-}
+
 
 .productDetails__Tab1Wrapper{
     position: relative;
@@ -57,10 +63,9 @@
     justify-content: center;
     -webkit-box-flex: 1;
     flex-grow: 1;
-    
-
+    color: rgb(25, 42, 50);
+    padding: 0px 20px;
     font-weight: 700;
-    width: 100%;
    
     height: 100%;
    
@@ -72,7 +77,7 @@
     -webkit-box-pack: center;
     justify-content: center;
     flex-direction: column;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid  rgb(25, 42, 50);
     height: calc(100% + 4px);
     padding: 0px 4px;
     width: 100%;
