--- a/src/ProductPage.css
+++ b/src/ProductPage.css
@@ -2,6 +2,9 @@
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    padding-top: 30px;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
     
    
 }
@@ -160,26 +163,52 @@
     margin-top: 10px;
 
 }
+.dd{
+    -webkit-box-pack: center;
+    justify-content: center;
+    display: flex;
+    flex-shrink: 0;
+}
 @media only screen and (max-width: 600px) {
 
     .product__cardGrid{
         display: grid;
         grid-template-rows: 1fr;
         grid-template-columns: 1fr 1fr;
-        margin-top: 30px;
+        padding-top: 30px;
         grid-column-gap: 10px;
         grid-row-gap: 10px;
+        width: 100%;
+        text-align: center;
+        position: relative;
+       
        
         
+       
+    }
+    .circle{
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        background-color: #fff;
+        position: absolute;
+        top: -10%;
+        left: 60%;
+        opacity: .9;
+        transform: scale(0);
+        transition: all .3s ease;
+        z-index:3;
+        display: none;
+       
        
     }
     .product__card{
      
         background-color: white;
-        width: 210px;
+        width: 100%;
         box-shadow: rgb(0 0 0 / 5%) 0px 0px 0px 0px, rgb(0 0 0 / 5%) 0px 2px 20px 0px;
         position: relative;
-        margin: 10px;
+      
      
         overflow: hidden;
         box-sizing: border-box;
@@ -194,15 +223,16 @@
         
        
     }
-    .product__card:hover{
-        height: 285px;
-        background-color: white;
-        width: 215px;
-        box-shadow: rgb(0 0 0 / 5%) 0px 0px 0px 0px, rgb(0 0 0 / 5%) 0px 2px 20px 0px;
-        transition: 0.5s;
+    .product__card:hover .circle{
+        transform: scale(1);
         display: none;
-    
     }
+    .product__card:hover .circle::before{
+        transform: scale(.9);
+        display: none;
+        
+    }
+ 
     .product__card-image{
         width: 100%;
     }
@@ -231,40 +261,16 @@
         margin-top: 10px;
     
     }
-    .circle{
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
-        background-color: #fff;
-        position: absolute;
-        top: -10%;
-        left: 60%;
-        opacity: .9;
-        transform: scale(0);
-        transition: all .3s ease;
-        z-index:3;
+    .product__card:hover{
+        height: 285px;
+        background-color: white;
+        width: 215px;
+        box-shadow: rgb(0 0 0 / 5%) 0px 0px 0px 0px, rgb(0 0 0 / 5%) 0px 2px 20px 0px;
+        transition: 0.5s;
         display: none;
-       
-       
+    
     }
-    .circle::before{
-        content: '';
-        display: block;
-        width: 100%;
-        height: 100%;
-        background-color:#57ccfd; ;
-        border-radius: 50%;
-        transform: scale(0);
-        transition: all .3s ease;
-        transition-delay: .2s;
-    }
-    .product__card:hover .circle{
-        transform: scale(1);
-    }
-    .product__card:hover .circle::before{
-        transform: scale(.9);
-        
-    }
+    
     
     .product__cardPhone{
         height: 280px;
@@ -287,14 +293,7 @@
         
        
     }
-    .product__card:hover{
-        height: 285px;
-        background-color: white;
-        width: 215px;
-        box-shadow: rgb(0 0 0 / 5%) 0px 0px 0px 0px, rgb(0 0 0 / 5%) 0px 2px 20px 0px;
-        transition: 0.5s;
-    
-    }
+   
     .product__card-imagePhone{
         width: 100%;
     }
