--- a/src/Phone/ProductDetailsMobile.css
+++ b/src/Phone/ProductDetailsMobile.css
@@ -5,11 +5,18 @@
     z-index: 0;
     
     display: flex;
-    flex: 1;
+   
    
     align-items: center;
     
     margin-top: 40px;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+
+  
  
     
 
@@ -19,14 +26,35 @@
    
 
    
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
+    padding-top: 30px;
+  
+    width: 100%;
+    height: 100%;
    
+    overflow-x: hidden;
+    overflow-y: scroll;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+
+
+
+    background: rgb(255, 255, 255);
    
    
 }
+.dff::-webkit-scrollbar {
+    display: none;
+  }
+  .ProductContainer::-webkit-scrollbar {
+    display: none;
+  }
+  
+  
+
 .productDetails__TabHeader{
     box-sizing: border-box;
     position: fixed;
