--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,7 @@ body {
   font-family: "proximanova", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-y: scroll; /* Hide vertical scrollbar */
-  overflow-x:hidden; 
+
 }
 
 code {
@@ -18,6 +17,7 @@ code {
 *{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 input {
   -webkit-writing-mode: horizontal-tb !important;
