--- a/src/Phone/ProductDetailsMobile.css
+++ b/src/Phone/ProductDetailsMobile.css
@@ -8,13 +8,17 @@
    
    
     align-items: center;
+    justify-content: center;
+ 
     
-    margin-top: 40px;
+    
+   
     overflow-x: hidden;
     overflow-y: hidden;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;
     -ms-overflow-style: none;
+    background-color: aqua;
 
   
  
@@ -26,9 +30,11 @@
    
 
    
-    display: grid;
-    grid-template-rows: 1fr;
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
     padding-top: 30px;
   
     width: 100%;
