--- a/src/ProductPagePhone.css
+++ b/src/ProductPagePhone.css
@@ -5,9 +5,12 @@
     padding-top: 30px;
     grid-column-gap: 10px;
     grid-row-gap: 10px;
+    align-items: center;
+    justify-content: center;
    
     width: 100%;
     height: 100%;
+    overflow: hidden;
    
     overflow-x: hidden;
     overflow-y: scroll;
@@ -15,11 +18,8 @@
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;
     -ms-overflow-style: none;
-    
-
-  
-    
    
+
 }
 .test{
     position: relative;
@@ -33,6 +33,7 @@
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;
     -ms-overflow-style: none;
+   
 }
 .test::-webkit-scrollbar {
     display: none;
@@ -96,27 +97,6 @@
 
 
 
-.product__cardPhone{
-    height: 280px;
-    background-color: white;
-    width: 210px;
-    box-shadow: rgb(0 0 0 / 5%) 0px 0px 0px 0px, rgb(0 0 0 / 5%) 0px 2px 20px 0px;
-    position: relative;
-    margin: 10px;
- 
-    overflow: hidden;
-    box-sizing: border-box;
-   
-    text-align: left;
-  
-    display: block;
-    transition: transform 0.3s ease 0s;
-    cursor: pointer;
-    line-height: 1;
-   
-    
-   
-}
 .product__card-imagePhone{
     width: 100%;
 }
