--- a/src/Phone/CartMobile.css
+++ b/src/Phone/CartMobile.css
@@ -13,8 +13,24 @@
     color: rgb(126, 154, 166);
     background-color: rgb(240, 245, 247);
     height: 246px;
-    padding-top: 62px;
+    padding-top: 30px;
+    width:'100%'
 }
+.ttt{
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
+    padding-bottom: 98px;
+
+
+}
+.dff::-webkit-scrollbar {
+    display: none;
+  }
+  .ProductContainer::-webkit-scrollbar {
+    display: none;
+  }
 .cartmobile__emptyIcon{
     margin-top: 50px;
     width: 56px;
@@ -59,6 +75,7 @@
     flex-direction: column;
     flex: 1 1 auto;
     padding-bottom: 98px;
+    width: 100%;
 }
 .cartmobile__sectionWrapper{
     display: flex;
@@ -67,12 +84,14 @@
 .cartmobile__sectionWrapperItem{
     display: flex;
     color: rgb(25, 42, 50);
-    padding: 16px;
+ 
     background: rgb(240, 245, 247);
     font-size: 14px;
     font-weight: 700;
+    padding: 16px;
     border-top: 1px solid rgb(212, 227, 235);
     border-bottom: 1px solid rgb(212, 227, 235);
+    
 }
 .cartmobile__sectionWrapperItemLink{
     display: flex;
@@ -81,4 +100,141 @@
 }
 .cartmobile__sectionWrapperItemLabel{
     flex: 1 1 auto;
+}
+.orderSummary__addPromoSection{
+    font-size: 14px;
+    font-weight: 400;
+    color: rgb(47, 183, 236);
+    cursor: pointer;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    margin: 16px 16px 4px;
+    padding-bottom: 12px;
+    border-bottom: 1px solid rgb(240, 245, 247);
+}
+.OrderSummary__PlusIconWrapper{
+    margin-right: 4px;
+    margin-top: 4px;
+}
+.OrderSummary__PriceSection{
+    display: flex;
+    flex-direction: column;
+    padding: 0px 16px 16px;
+    font-size: 14px;
+    font-weight: 400;
+    border-bottom: 1px solid rgb(212, 227, 235);
+}
+.OrderSummary__PriceRow{
+    display: flex;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    margin-top: 5px;
+    color: rgb(25, 42, 50);
+
+}
+.OrderSummary__PriceTitle{
+
+}
+.CartPage__BottomBannerWrapper{
+    
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    border-bottom: 1px solid rgb(212, 227, 235);
+
+}
+.OrderHistory__CarouselBannerCardWrapper{
+    display: flex;
+    font-size: 14px;
+    font-weight: 700;
+    box-sizing: border-box;
+    width: 98vw;
+    height: calc(100% - 20px);
+    margin: 10px 1vw;
+    padding: 12px 8px;
+    -webkit-box-align: center;
+    align-items: center;
+    background-color: rgb(255, 255, 255);
+    border-radius: 4px;
+    cursor: pointer;
+}
+.OrderHistory__CarouselBannerIconWrapper{
+    width: 40px;
+    height: 40px;
+    margin: 0px 16px 0px 4px;
+    flex: 0 0 40px;
+}
+.OrderHistory__CarouselBannerTextWrapper{
+    display: flex;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    justify-content: center;
+    color: rgb(25, 42, 50); 
+}
+.OrderHistory__CarouselBannerTitle{
+    font-size: 14px;
+    font-weight: 700;
+    color: rgb(25, 42, 50);
+}
+.OrderHistory__CarouselBannerSubtitle{
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: rgb(25, 42, 50);
+    margin-top: 4px;
+}
+.OrderHistory__CarouselBannerLearnMoreLink{
+    font-size: 14px;
+    font-weight: 400;
+    color: rgb(47, 183, 236);
+    margin-left: 2px;
+}
+.ReturnPolicy__ReturnPolicyWrapper{
+    display: flex;
+    padding: 16px;
+    cursor: pointer;
+}
+.DesignSpec__TextSpecWrapper{
+    display: flex;
+    font-weight: 400;
+    font-size: 12px;
+    -webkit-box-pack: start;
+    justify-content: flex-start;
+    color: rgb(47, 183, 236);
+}
+.CartPage__CheckoutFooterWrapper{
+    padding-bottom: env(safe-area-inset-bottom);
+    position: fixed;
+    bottom: 0px;
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    z-index: 3;
+}
+.CartPage__CheckoutFooter{
+    padding: 8px;
+    border-top: 1px solid rgb(212, 227, 235);
+}
+.Button {
+    color: rgb(255, 255, 255);
+    background-color: rgb(255, 86, 34);
+    font-size: 16px;
+    font-weight: 700;
+    height: 40px;
+}
+.Button___StyledStyledWishButtonWithKeyboard{
+    position: relative;
+    border-radius: 4px;
+    padding: 0px 16px;
+    cursor: pointer;
+    width: 100%;
+    display: inline-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    flex-shrink: 0;
+    transition: background-color 0.2s ease 0s;
+    font-weight: bold !important;
+
 }
