--- a/src/Cart.css
+++ b/src/Cart.css
@@ -295,6 +295,11 @@
     align-items: center;
     
 }
+@media only screen and (max-width: 600px) {
+    .cart{
+      visibility: hidden;
+    }
+}
 
 
 
