--- a/src/Home.css
+++ b/src/Home.css
@@ -22,6 +22,10 @@
 .home__products{
     flex: 1 1 auto;
     background-color: rgb(248, 250, 251);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .home__refreral{
     display: flex;
