--- a/src/ProductPage.css
+++ b/src/ProductPage.css
@@ -37,7 +37,7 @@
    
 }
 .product__card:hover{
-    height: 285px;
+    height: 280px;
     background-color: white;
     width: 215px;
     box-shadow: rgb(0 0 0 / 5%) 0px 0px 0px 0px, rgb(0 0 0 / 5%) 0px 2px 20px 0px;
@@ -72,7 +72,7 @@
     margin-top: 10px;
 
 }
-.circle{
+/*.circle{
     width: 100px;
     height: 100px;
     border-radius: 50%;
@@ -105,6 +105,7 @@
     transform: scale(.9);
     
 }
+*/
 
 .product__cardPhone{
     height: 280px;
@@ -127,14 +128,7 @@
     
    
 }
-.product__card:hover{
-    height: 285px;
-    background-color: white;
-    width: 215px;
-    box-shadow: rgb(0 0 0 / 5%) 0px 0px 0px 0px, rgb(0 0 0 / 5%) 0px 2px 20px 0px;
-    transition: 0.5s;
 
-}
 .product__card-imagePhone{
     width: 100%;
 }
@@ -168,6 +162,7 @@
     justify-content: center;
     display: flex;
     flex-shrink: 0;
+  
 }
 @media only screen and (max-width: 600px) {
 
