--- a/src/Phone/TabBar.css
+++ b/src/Phone/TabBar.css
@@ -8,6 +8,7 @@
     display: flex;
     flex: 0 0 auto;
     overflow-x: scroll;
+    overflow-y: none;
     z-index: 3;
     transition: transform 0.25s ease 0s;
     transform: translateY(0px);
